new dtos some enums now generated by openapi created conteststatus enum initial work on voting, untested
